--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ dependency_overrides:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  curved_navigation_bar: ^1.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
