--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,7 +121,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/app_logo.png
+    - assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
